# md2image

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
src/: app.rs  browser.rs  cli.rs  error.rs  html.rs  input.rs  katex.rs  lib.rs  main.rs  markdown.rs  render.rs
tests/: cli.rs  render_integration.rs
tests/fixtures/: basic.md  invalid_math.md  math.md
